--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
           <div class="bg-gray-800 rounded-lg p-2.5 mb-2">
             <h4 class="text-sm font-semibold text-white mb-1">C++ Redistributable Runtimes</h4>
             <p class="text-xs text-gray-300 mb-1">All-in-one package of essential runtime libraries for older executables.</p>
-            <a href="https://www.microsoft.com/en-us/download/details.aspx?id=40784" target="_blank" class="text-blue-400 hover:underline text-xs">Download VC++ 2013 x86</a>
+            <a href="https://www.techpowerup.com/download/visual-c-redistributable-runtime-package-all-in-one" target="_blank" class="text-blue-400 hover:underline text-xs">Download Visual C++ Runtimes</a>
           </div>
 
           <div class="bg-gray-800 rounded-lg p-2.5 mb-2">
