--- a/index.html
+++ b/index.html
@@ -215,8 +215,7 @@
     
     <p class="text-gray-300 text-sm mb-6">
       This page is a curated archive of S.T.A.L.K.E.R. game modifications, focusing mainly on story-driven projects I’ve reviewed on the <a href="https://linktr.ee/cheekibreekii" target="_blank" class="text-white underline">YouTube Channel</a>.
-      The goal is simply to consolidate, preserve, and make easily accessible these mods and their English translations, which are too often scattered across various websites, hosting services, and Discord servers. All credit goes to the original mod authors.<br><br>
-      I'M CURRENTLY REBUILDING THIS PAGE FROM SCRATCH - BETTER VERSION WITH MORE MODS, FEATURES & INFO COMING SOON(ish)!
+      The goal is simply to consolidate, preserve, and make easily accessible these mods and their English translations, which are too often scattered across various websites, hosting services, and Discord servers. All credit goes to the original mod authors.
     </p>
     
     <div class="flex flex-wrap items-center gap-2 mb-4">
